# cVLA

./: LICENSE  README.md  data_augment.ipynb  data_augmentations.py  data_loader.py  data_loader_h5.py  data_loader_images.py  data_loader_jsonl.py  data_loader_paired.py  dataset_compare.ipynb  dataset_compare_depth.ipynb  dataset_eval.ipynb  dataset_visualize.ipynb  finetune_paligemma2_trf.ipynb  finetune_paligemma_jax.ipynb  finetune_paligemma_robotflow.ipynb  hf_eval_notebook.ipynb  hf_finetune_paligemma2-depth.ipynb  hf_finetune_paligemma2-im2im.ipynb  hf_finetune_paligemma2.ipynb  hf_image_condition.py  hf_model_class.py  hf_robot.ipynb  jax_eval.py  jax_eval_notebook.ipynb  jax_finetune_paligemma.ipynb  pyproject.toml  test_image_crop.ipynb  test_notebook.ipynb  utils_traj_tokens.py  utils_trajectory.py  utils_vis.py
cvla/: cvla_model_class.py  data_augmentations.py  data_loader_h5.py  data_loader_jsonl.py  data_loader_paired.py  hf_model_class.py  utils_eval.py  utils_traj_tokens.py  utils_trajectory.py  utils_vis.py
scripts/: data_augment.ipynb  dataset_compare.ipynb  dataset_compare_depth.ipynb  dataset_eval.ipynb  dataset_vis.ipynb  hf_eval_notebook.ipynb  hf_eval_simulation.ipynb  hf_finetune_grasp.ipynb  hf_finetune_paligemma2-depth.ipynb  hf_finetune_paligemma2-im2im.ipynb  hf_finetune_paligemma2.ipynb  hf_finetune_paligemma2_base.ipynb  hf_finetune_paligemma2_basedepth.ipynb  hf_finetune_paligemma2_baseloss.ipynb  hf_finetune_paligemma2_basetop.ipynb  hf_finetune_paligemma2_basetop_loss.ipynb  hf_finetune_paligemma2_topview.ipynb  hf_image_condition.py  (+7 more)
(+24 files in other folders)
